--- a/src/CSS/Pets.css
+++ b/src/CSS/Pets.css
@@ -3,6 +3,7 @@
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
+  margin-top: 50px;
 }
 
 .adopted-animal-pic { width: 300px; height: 300px; object-fit: none; }
